--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <span></span>
           </button>
           <div class="site-logo">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#">
               <span class="logo-text">Whatsapp <span class="text-alt">clone</span></span>
             </a>
             <span class="badge bg-primary"></span>
